Starting with React

--- a/Html Codes/check.html
+++ b/Html Codes/check.html
@@ -12,5 +12,7 @@
 
         <br>
         <button onclick="map1()">Clicl Here</button>
+        &nbsp; &nbsp;
+        <button onclick="filter_map()">Filter and map together</button>
     </body>
 </html>
