Creating a new React project

--- a/Html Codes/check.html
+++ b/Html Codes/check.html
@@ -3,6 +3,7 @@
         <title>Paul check</title>
         <script src="../functions/my_check.jsx">
         </script>
+        <script src="../functions/index.jsx"></script>
     </head>
     <body>
         <div>
